--- a/index.html
+++ b/index.html
@@ -1,216 +1,319 @@
-<!DOCTYPE html>  <html lang="pt-br">  
-<head>  
-  <meta charset="UTF-8">  
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-  <meta name="description" content="Portfólio profissional de AristidesBP - Desenvolvimento Web, Aplicativos e Tráfego Pago.">  
-  <meta name="keywords" content="AristidesBP, Desenvolvimento Web, Programador, Tráfego Pago, Front-End, AndroidIDE, Aplicativos">  
-  <meta name="author" content="AristidesBP">  
-  <title>Portfólio AristidesBP</title>  
-  <link rel="stylesheet" href="style.css">  
-  <link rel="preconnect" href="https://fonts.googleapis.com">  
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>  
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">  
-  <link href="index.css" rel="stylesheet">  
-</head>  
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <title>IDE Pessoal - Editor de Código</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: Consolas, monospace;
+      display: flex;
+      flex-direction: column;
+      height: 100vh;
+      transition: background-color 0.3s, color 0.3s;
+    }
+
+    body.escuro {
+      background-color: #1e1e1e;
+      color: #ffffff;
+    }
+
+    body.claro {
+      background-color: #f5f5f5;
+      color: #000000;
+    }
+
+    header {
+      padding: 10px;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      justify-content: space-between;
+      align-items: center;
+      border-bottom: 1px solid #777;
+    }
+
+    header select, header button {
+      padding: 6px 10px;
+      font-size: 14px;
+      border-radius: 4px;
+      border: 1px solid #777;
+      background-color: #007acc;
+      color: #fff;
+      cursor: pointer;
+    }
+
+    textarea {
+      flex: 1;
+      width: 100%;
+      padding: 10px;
+      font-size: 14px;
+      border: none;
+      resize: none;
+      background-color: inherit;
+      color: inherit;
+    }
+
+    .controles {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background: inherit;
+      border-top: 1px solid #555;
+      padding: 10px;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 8px;
+      justify-content: center;
+      z-index: 100;
+    }
+
+    .controles input,
+    .controles button {
+      padding: 6px 10px;
+      font-size: 14px;
+      border-radius: 4px;
+      border: 1px solid #777;
+    }
+
+    .controles input {
+      background-color: #fff;
+      color: #000;
+    }
+
+    .controles button {
+      background-color: #007acc;
+      color: #fff;
+      cursor: pointer;
+    }
+
+    .claro .controles input {
+      background-color: #eee;
+      color: #000;
+    }
+
+    .escuro .controles input {
+      background-color: #333;
+      color: #fff;
+    }
+
+    #resultado {
+      font-size: 14px;
+      padding-top: 4px;
+      text-align: center;
+      width: 100%;
+    }
+
+    @media (max-width: 768px) {
+      .controles {
+        flex-direction: column;
+        align-items: stretch;
+      }
+    }
+  </style>
+</head>
+<body class="escuro">
+
+  <!-- TOPO -->
+  <header>
+    <select id="linguagem">
+      <option value="">Selecionar linguagem</option>
+      <option value="html">HTML</option>
+      <option value="css">CSS</option>
+      <option value="js">JavaScript</option>
+      <option value="py">Python</option>
+    </select>
 
 
-<body>  
-
-
-<img src="projetos/portfolio-aristidesbp/img/logoAbp.png" alt="logoAbp.png" class="w-full h-64 object-cover rounded-b-xl shadow-lg">
-<br>
-<br>
-
-
-<!-- Lista de links -->
-<div id="listaLinks"></div>
-<script src="listaLinks.js"></script>
-<script>listaLinks();</script>
- 
-
-
-
-<!-- Caixa flutuante da rádio e botão tema -->  
-<div id="radio-float">  <!-- Botão de tema claro/escuro -->  
-<button id="theme-toggle" title="Alternar tema">🌓</button>
-
-<button id="radio-float-toggle" title="Mostrar/Ocultar Rádio">🎵</button>
-
-<div id="radio-float-content">  
-<audio id="hoverSound" src="https://cdn.pixabay.com/audio/2022/07/26/audio_124bfae1b4.mp3" preload="auto"></audio>  
-      <audio id="bgMusic" src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"></audio>  
-      <div class="music-controls-row">  
-        <button id="bgMusicBtn" title="Play/Pause">🎵</button>  
-        <button id="vol-down" title="Diminuir volume">➖</button>  
-        <input id="vol-slider" type="range" min="0" max="1" step="0.01" value="0.2" aria-label="Volume">  
-        <button id="vol-up" title="Aumentar volume">➕</button>  
-      </div>  
-      <div class="music-controls-row">  
-        <select id="music-select" title="Escolha a trilha">  
-          <option value="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3">Trilha 1</option>  
-          <option value="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-2.mp3">Trilha 2</option>  
-          <option value="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-3.mp3">Trilha 3</option>  
-          <option value="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-4.mp3">Trilha 4</option>  
-          <option value="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-5.mp3">Trilha 5</option>  
-          <option value="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-6.mp3">Trilha 6</option>  
-          <option value="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-7.mp3">Trilha 7</option>  
-          <option value="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-8.mp3">Trilha 8</option>  
-          <option value="https://cdn.pixabay.com/audio/2023/02/10/audio_12c6a1d6bb.mp3">Jazz Suave</option>  
-          <option value="https://cdn.pixabay.com/audio/2022/12/19/audio_12f5e4b66b.mp3">Ambiental Chill</option>  
-          <option value="https://cdn.pixabay.com/audio/2022/10/16/audio_12a8f0d3f4.mp3">Piano Relaxante</option>  
-        </select>  
-        <input type="checkbox" id="repeatMusic" style="accent-color:#007BFF;" title="Repetir faixa">  
-        <label for="repeatMusic" title="Repetir faixa" style="font-size:1.05em;cursor:pointer;">🔁</label>  
-      </div>  
-      <div class="music-controls-row">  
-        <span id="music-current">0:00</span>  
-        <input id="music-progress" type="range" min="0" max="100" value="0" step="0.01" aria-label="Progresso da música">  
-        <span id="music-duration">0:00</span>  
-      </div>  
-    </div>  
-  </div>  
- <!-- fim da Caixa flutuante da rádio com o botão tema -->  
+<button onclick="identarCodigo()">Identar Código</button>
 
 
 
 
 
-<script>  
-// Modo claro/escuro  
-const themeBtn = document.getElementById('theme-toggle');  
-function setTheme(dark) {  
-  if(dark) {  
-    document.body.classList.add('dark');  
-    localStorage.setItem('theme','dark');  
-  } else {  
-    document.body.classList.remove('dark');  
-    localStorage.setItem('theme','light');  
-  }  
-}  
-themeBtn.onclick = function() {  
-  setTheme(!document.body.classList.contains('dark'));  
-};  
-if(localStorage.getItem('theme') === 'dark' ||  
-   (localStorage.getItem('theme')===null && window.matchMedia('(prefers-color-scheme: dark)').matches)) {  
-  setTheme(true);  
-} else {  
-  setTheme(false);  
-}  
-  
-// Caixa flutuante rádio: mostra/esconde conteúdo  
-const radioFloat = document.getElementById('radio-float');  
-const radioFloatToggle = document.getElementById('radio-float-toggle');  
-radioFloatToggle.onclick = function() {  
-  radioFloat.classList.toggle('closed');  
-  radioFloatToggle.title = radioFloat.classList.contains('closed') ? "Mostrar Rádio" : "Ocultar Rádio";  
-};  
-  
-// Painel música (igual antes)  
-document.addEventListener('DOMContentLoaded', function () {  
-  const bgMusic = document.getElementById('bgMusic');  
-  const bgMusicBtn = document.getElementById('bgMusicBtn');  
-  const volDown = document.getElementById('vol-down');  
-  const volUp = document.getElementById('vol-up');  
-  const volSlider = document.getElementById('vol-slider');  
-  const musicSelect = document.getElementById('music-select');  
-  const musicProgress = document.getElementById('music-progress');  
-  const musicCurrent = document.getElementById('music-current');  
-  const musicDuration = document.getElementById('music-duration');  
-  const repeatMusic = document.getElementById('repeatMusic');  
-  const musicList = Array.from(musicSelect.options).map(opt => opt.value);  
-  
-  bgMusic.volume = parseFloat(volSlider.value);  
-  bgMusic.loop = false;  
-  bgMusicBtn.title = 'Play/Pause';  
-  
-  bgMusicBtn.onclick = function () {  
-    if (bgMusic.paused) {  
-      bgMusic.play().catch(()=>{});  
-      bgMusicBtn.textContent = '🔊';  
-    } else {  
-      bgMusic.pause();  
-      bgMusicBtn.textContent = '🎵';  
-    }  
-  };  
-  function updateVolumeDisplay() {  
-    volSlider.value = bgMusic.volume;  
-  }  
-  volDown.onclick = function () {  
-    bgMusic.volume = Math.max(0, bgMusic.volume - 0.08);  
-    updateVolumeDisplay();  
-  };  
-  volUp.onclick = function () {  
-    bgMusic.volume = Math.min(1, bgMusic.volume + 0.08);  
-    updateVolumeDisplay();  
-  };  
-  volSlider.oninput = function () {  
-    bgMusic.volume = parseFloat(volSlider.value);  
-  };  
-  // Troca de música pelo select  
-  musicSelect.onchange = function() {  
-    const wasPlaying = !bgMusic.paused;  
-    bgMusic.src = musicSelect.value;  
-    bgMusic.currentTime = 0;  
-    if (wasPlaying) {  
-      bgMusic.play().catch(()=>{});  
-      bgMusicBtn.textContent = '🔊';  
-    } else {  
-      bgMusicBtn.textContent = '🎵';  
-    }  
-  };  
-  // Barra de progresso  
-  function formatTime(sec) {  
-    if (isNaN(sec)) return "0:00";  
-    sec = Math.floor(sec);  
-    let min = Math.floor(sec / 60);  
-    let s = sec % 60;  
-    return min + ":" + (s < 10 ? "0" : "") + s;  
-  }  
-  function updateProgress() {  
-    const current = bgMusic.currentTime;  
-    const duration = bgMusic.duration;  
-    musicCurrent.textContent = formatTime(current);  
-    musicDuration.textContent = formatTime(duration);  
-    musicProgress.value = duration ? (current / duration) * 100 : 0;  
-  }  
-  bgMusic.addEventListener('timeupdate', updateProgress);  
-  bgMusic.addEventListener('durationchange', updateProgress);  
-  bgMusic.addEventListener('loadedmetadata', updateProgress);  
-  bgMusic.addEventListener('ended', function() {  
-    if (repeatMusic.checked) {  
-      bgMusic.currentTime = 0;  
-      bgMusic.play().catch(()=>{});  
-      bgMusicBtn.textContent = '🔊';  
-    } else {  
-      let idx = musicList.indexOf(musicSelect.value);  
-      let next = (idx + 1) % musicList.length;  
-      musicSelect.selectedIndex = next;  
-      bgMusic.src = musicList[next];  
-      bgMusic.currentTime = 0;  
-      bgMusic.play().catch(()=>{});  
-      bgMusicBtn.textContent = '🔊';  
-    }  
-  });  
-  musicProgress.addEventListener('input', function() {  
-    if (bgMusic.duration) {  
-      bgMusic.currentTime = (musicProgress.value / 100) * bgMusic.duration;  
-    }  
-  });  
-  musicSelect.addEventListener('change', function() {  
-    setTimeout(updateProgress, 400);  
-  });  
-  repeatMusic.addEventListener('change', function () {  
-    bgMusic.loop = repeatMusic.checked;  
-  });  
-  // Sound on hover for .links a  
-  document.querySelectorAll('.links a').forEach(link => {  
-    link.addEventListener('mouseenter', () => {  
-      const audio = document.getElementById('hoverSound');  
-      audio.currentTime = 0;  
-      audio.volume = 0.20;  
-      audio.play();  
-    });  
-  });  
-});  
-</script>  </body>  
-</html>  
+
+
+    <input type="file" id="input-arquivo" accept=".txt,.html,.css,.js,.py,.json,.md,.xml,.php,.sh,.c,.cpp,.java,.ts,.rb,.go,.sql,.ini,.conf" onchange="carregarArquivoDoUsuario()" />
+
+    <button onclick="abrirNoNavegador()">Abrir no Navegador</button>
+    <button onclick="trocarTema()">Trocar Tema</button>
+  </header>
+
+  <!-- ÁREA DE EDIÇÃO -->
+  <textarea id="editor" placeholder="Carregue ou digite seu código aqui..."></textarea>
+
+  <!-- CONTROLES INFERIORES -->
+  <div class="controles">
+    <input type="text" id="busca" placeholder="Buscar...">
+    <input type="text" id="substituir" placeholder="Substituir por...">
+    <button onclick="buscarTexto()">Buscar</button>
+    <button onclick="proximaOcorrencia()" id="btnProxima" disabled>Próxima</button>
+    <button onclick="substituirTextoSelecionado()">Substituir Selecionado</button>
+    <button onclick="substituirTodas()">Substituir Todas</button>
+    <button onclick="baixarArquivo()">Salvar</button>
+    <div id="resultado"></div>
+  </div>
+
+  <script>
+    let ocorrencias = [];
+    let indiceAtual = 0;
+    let nomeOriginal = "arquivo.txt";
+
+    function carregarArquivoDoUsuario() {
+      const input = document.getElementById("input-arquivo");
+      const arquivo = input.files[0];
+      if (!arquivo) return;
+      nomeOriginal = arquivo.name;
+
+      const leitor = new FileReader();
+      leitor.onload = function(e) {
+        document.getElementById("editor").value = e.target.result;
+      };
+      leitor.readAsText(arquivo);
+    }
+
+    function buscarTexto() {
+      const texto = document.getElementById("editor").value;
+      const busca = document.getElementById("busca").value;
+      ocorrencias = [];
+      indiceAtual = 0;
+
+      if (!busca) return;
+
+      let pos = texto.indexOf(busca);
+      while (pos !== -1) {
+        ocorrencias.push(pos);
+        pos = texto.indexOf(busca, pos + busca.length);
+      }
+
+      const resultado = document.getElementById("resultado");
+      const btnProxima = document.getElementById("btnProxima");
+
+      if (ocorrencias.length > 0) {
+        resultado.innerText = `🔍 ${ocorrencias.length} ocorrência(s) encontrada(s)`;
+        btnProxima.disabled = false;
+        destacarOcorrencia();
+      } else {
+        resultado.innerText = "⚠️ Nenhuma ocorrência encontrada.";
+        btnProxima.disabled = true;
+      }
+    }
+
+    function proximaOcorrencia() {
+      if (ocorrencias.length === 0) return;
+      indiceAtual = (indiceAtual + 1) % ocorrencias.length;
+      destacarOcorrencia();
+    }
+
+    function destacarOcorrencia() {
+      const editor = document.getElementById("editor");
+      const busca = document.getElementById("busca").value;
+      const pos = ocorrencias[indiceAtual];
+      editor.focus();
+      editor.setSelectionRange(pos, pos + busca.length);
+    }
+
+    function substituirTextoSelecionado() {
+      const busca = document.getElementById("busca").value;
+      const substituir = document.getElementById("substituir").value;
+      const editor = document.getElementById("editor");
+
+      if (!busca || !substituir || ocorrencias.length === 0) return;
+
+      const texto = editor.value;
+      const pos = ocorrencias[indiceAtual];
+
+      editor.value =
+        texto.slice(0, pos) + substituir + texto.slice(pos + busca.length);
+
+      buscarTexto(); // Atualiza todas as ocorrências novamente
+    }
+
+    function substituirTodas() {
+      const busca = document.getElementById("busca").value;
+      const substituir = document.getElementById("substituir").value;
+      const editor = document.getElementById("editor");
+
+      if (!busca || !substituir) return;
+
+      const textoAtual = editor.value;
+      const novoTexto = textoAtual.split(busca).join(substituir);
+      editor.value = novoTexto;
+      buscarTexto(); // Atualiza a busca após alteração
+    }
+
+    function baixarArquivo() {
+      const texto = document.getElementById("editor").value;
+      let nome = prompt("Digite o nome do arquivo com extensão (ex: index.js):", nomeOriginal);
+      if (!nome) return;
+
+      const blob = new Blob([texto], { type: "text/plain" });
+      const url = URL.createObjectURL(blob);
+      const a = document.createElement("a");
+      a.href = url;
+      a.download = nome;
+      document.body.appendChild(a);
+      a.click();
+      document.body.removeChild(a);
+    }
+
+    function trocarTema() {
+      const body = document.body;
+      body.classList.toggle("escuro");
+      body.classList.toggle("claro");
+    }
+
+    function abrirNoNavegador() {
+      const texto = document.getElementById("editor").value;
+      const novaJanela = window.open();
+      novaJanela.document.open();
+      novaJanela.document.write(texto);
+      novaJanela.document.close();
+    }
+
+function identarCodigo() {
+  const editor = document.getElementById("editor");
+  const codigo = editor.value;
+
+  try {
+    // Formata como HTML usando DOMParser (funciona bem com HTML, XML e até JS simples)
+    const blob = new Blob([codigo], { type: 'text/html' });
+    const reader = new FileReader();
+
+    reader.onload = function (e) {
+      const parser = new DOMParser();
+      const doc = parser.parseFromString(e.target.result, 'text/html');
+
+      let formatado = '';
+      const formatNode = (node, nivel = 0) => {
+        const indent = '  '.repeat(nivel);
+        if (node.nodeType === 3) {
+          const text = node.textContent.trim();
+          if (text) formatado += indent + text + '\n';
+        } else if (node.nodeType === 1) {
+          formatado += `${indent}<${node.tagName.toLowerCase()}${Array.from(node.attributes).map(attr => ` ${attr.name}="${attr.value}"`).join('')}>\n`;
+          node.childNodes.forEach(child => formatNode(child, nivel + 1));
+          formatado += `${indent}</${node.tagName.toLowerCase()}>\n`;
+        }
+      };
+
+      doc.body.childNodes.forEach(n => formatNode(n));
+      editor.value = formatado.trim();
+    };
+
+    reader.readAsText(blob);
+  } catch (e) {
+    alert("Erro ao tentar identar. Certifique-se de que o código esteja válido.");
+  }
+}
+
+  </script>
+
+</body>
+</html>
