--- a/rb/t2.html
+++ b/rb/t2.html
@@ -1,137 +1,179 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+<!doctype html>
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>RB Estruturas e Eventos</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap" rel="stylesheet">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>RB Estruturas & Eventos — Convenções e Grandes Eventos</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
   <style>
-    :root {
-      --primary: #f97316; /* laranja logo */
-      --dark: #1a1a1a;
-      --light: #f5f5f5;
-      --gray: #777;
-    }
-    * {margin:0;padding:0;box-sizing:border-box;font-family:'Montserrat', sans-serif;}
-    body {background:var(--light);color:var(--dark);line-height:1.6;overflow-x:hidden;}
-    header {
-      background:linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('images/img1.jpg') center/cover no-repeat;
-      color:#fff;text-align:center;padding:100px 20px;position:relative;
-    }
-    header h1 {font-size:3rem;margin-bottom:10px;animation: fadeInDown 1s;}
-    header p {font-size:1.2rem;margin-bottom:20px;animation: fadeInUp 1.2s;}
-    header a {
-      background:var(--primary);color:#fff;padding:12px 30px;text-decoration:none;
-      border-radius:30px;transition:0.3s;font-weight:600;animation: fadeInUp 1.5s;
-    }
-    header a:hover {background:#ff8c3f;}
-    nav {position:fixed;top:0;left:0;width:100%;background:#fff;box-shadow:0 2px 5px rgba(0,0,0,0.1);z-index:1000;display:flex;justify-content:space-between;align-items:center;padding:10px 30px;}
-    nav h2 {color:var(--primary);font-size:1.2rem;}
-    nav ul {list-style:none;display:flex;gap:20px;}
-    nav ul li a {text-decoration:none;color:var(--dark);font-weight:600;transition:0.3s;}
-    nav ul li a:hover {color:var(--primary);}
-    section {padding:80px 20px;text-align:center;}
-    .fade-in {opacity:0;transform:translateY(40px);transition:all 0.8s ease;}
-    .fade-in.visible {opacity:1;transform:translateY(0);}
-    .about {background:#fff;}
-    .about h2 {font-size:2.5rem;color:var(--primary);margin-bottom:20px;}
-    .about p {max-width:800px;margin:auto;font-size:1.1rem;color:var(--gray);}
-    .services {background:var(--light);}
-    .services h2 {font-size:2.5rem;color:var(--primary);margin-bottom:40px;}
-    .cards {display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:20px;}
-    .card {background:#fff;padding:30px;border-radius:10px;box-shadow:0 4px 10px rgba(0,0,0,0.1);transition:0.3s;}
-    .card:hover {transform:translateY(-10px);}
-    .card h3 {color:var(--primary);margin-bottom:15px;}
-    .gallery {background:#fff;}
-    .gallery h2 {font-size:2.5rem;color:var(--primary);margin-bottom:40px;}
-    .images {display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:15px;}
-    .images img {width:100%;border-radius:10px;transition:0.3s;}
-    .images img:hover {transform:scale(1.05);}
-    .numbers {background:var(--primary);color:#fff;}
-    .stats {display:flex;flex-wrap:wrap;justify-content:center;gap:40px;}
-    .stat {text-align:center;}
-    .stat h3 {font-size:2.5rem;margin-bottom:10px;}
-    .contact {background:#fff;}
-    .contact h2 {font-size:2.5rem;color:var(--primary);margin-bottom:20px;}
-    .contact form {max-width:600px;margin:auto;display:flex;flex-direction:column;gap:15px;}
-    .contact input,.contact textarea {padding:15px;border:1px solid #ddd;border-radius:5px;font-size:1rem;}
-    .contact button {background:var(--primary);color:#fff;padding:15px;border:none;border-radius:30px;font-weight:600;cursor:pointer;transition:0.3s;}
-    .contact button:hover {background:#ff8c3f;}
-    footer {background:var(--dark);color:#fff;text-align:center;padding:20px;}
-    @keyframes fadeInDown {from{opacity:0;transform:translateY(-40px);}to{opacity:1;transform:translateY(0);}}
-    @keyframes fadeInUp {from{opacity:0;transform:translateY(40px);}to{opacity:1;transform:translateY(0);}}
-    @media(max-width:768px){
-      header h1{font-size:2rem;}
-      nav ul{display:none;}
+    :root{--bg:#08090c;--card:#0f1720;--orange:#ff6a00;--orange-light:#ff944d;--muted:#9fb0c8;--glass:rgba(255,255,255,0.05)}
+    *{box-sizing:border-box}body{margin:0;font-family:Inter,system-ui,Arial;background:linear-gradient(180deg,var(--bg),#071225);color:#e9f2ff}
+    a{text-decoration:none;color:inherit}
+    header{position:fixed;left:0;right:0;top:0;z-index:100;background:rgba(8,9,12,0.8);backdrop-filter:blur(8px);transition:.3s}
+    .nav{max-width:1200px;margin:0 auto;display:flex;align-items:center;justify-content:space-between;padding:14px}
+    .brand{display:flex;gap:12px;align-items:center}
+    .logo{width:46px;height:46px;background:var(--orange);border-radius:8px;display:flex;align-items:center;justify-content:center;font-weight:800;color:#07101a}
+    nav ul{display:flex;gap:18px;list-style:none;margin:0;padding:0}
+    nav a{font-weight:600;color:#fff}
+    .menu-toggle{display:none;flex-direction:column;gap:5px;cursor:pointer}
+    .menu-toggle span{width:26px;height:3px;background:#fff;border-radius:2px}
+    .mobile-nav{display:none;flex-direction:column;gap:12px;background:#0f1720;position:absolute;top:100%;left:0;right:0;padding:20px}
+
+    .hero{min-height:88vh;display:grid;grid-template-columns:1fr 520px;gap:32px;align-items:center;padding:120px 24px 40px}
+    h1{font-size:44px;margin:0 0 12px;line-height:1.1;color:#fff;font-weight:800}
+    .tag{background:var(--glass);padding:6px 12px;border-radius:999px;color:var(--orange);font-weight:700;margin-bottom:18px;display:inline-block}
+    p.lead{color:var(--muted);font-size:18px;margin:0 0 22px}
+    .btn{cursor:pointer;border:none}
+    .btn-primary{background:linear-gradient(90deg,var(--orange),var(--orange-light));color:#07101a;padding:12px 18px;border-radius:10px;font-weight:700}
+    .btn-ghost{background:transparent;border:1px solid var(--glass);color:#e9f2ff;padding:12px 18px;border-radius:10px;font-weight:700}
+
+    main{max-width:1200px;margin:0 auto;padding:18px}
+    section{padding:44px 0;border-top:1px solid var(--glass);opacity:0;transform:translateY(18px);transition:all .7s}
+    section.in-view{opacity:1;transform:translateY(0)}
+
+    .services{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:16px}
+    .service{padding:18px;border-radius:12px;background:var(--glass);transition:.3s}
+    .service:hover{transform:translateY(-8px);box-shadow:0 18px 40px rgba(2,6,15,0.6)}
+
+    .gallery{display:grid;grid-template-columns:repeat(auto-fit,minmax(160px,1fr));gap:10px}
+    .gallery img{width:100%;height:160px;object-fit:cover;border-radius:8px;cursor:pointer;transition:transform .3s}
+    .gallery img:hover{transform:scale(1.04)}
+
+    .contact{display:grid;grid-template-columns:1fr 360px;gap:20px}
+    form{display:flex;flex-direction:column;gap:12px}
+    input,textarea,select{padding:12px;border-radius:8px;border:1px solid var(--glass);background:transparent;color:#e8f0ff}
+    textarea{min-height:120px}
+    footer{padding:28px 0;color:var(--muted);text-align:center}
+
+    @media(max-width:980px){
+      .hero{grid-template-columns:1fr;padding-top:110px}
+      .contact{grid-template-columns:1fr}
+      .menu-toggle{display:flex}
+      nav ul{display:none}
+      .mobile-nav.active{display:flex}
     }
   </style>
 </head>
 <body>
-  <nav>
-    <h2>RB Estruturas</h2>
-    <ul>
-      <li><a href="#about">Sobre</a></li>
-      <li><a href="#services">Serviços</a></li>
-      <li><a href="#gallery">Galeria</a></li>
-      <li><a href="#contact">Contato</a></li>
-    </ul>
-  </nav>
   <header>
-    <h1>RB Estruturas e Eventos</h1>
-    <p>Mais de 10 anos realizando convenções e grandes eventos com segurança e impacto.</p>
-    <a href="#contact">Solicite um Orçamento</a>
+    <div class="nav">
+      <div class="brand">
+        <div class="logo">RB</div>
+        <div>
+          <div style="font-weight:800">RB Estruturas & Eventos</div>
+          <div style="font-size:12px;color:var(--muted)">Mais de 10 anos no ramo</div>
+        </div>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#servicos">Serviços</a></li>
+          <li><a href="#portfolio">Portfólio</a></li>
+          <li><a href="#contato">Contato</a></li>
+        </ul>
+        <div class="menu-toggle" onclick="document.querySelector('.mobile-nav').classList.toggle('active')">
+          <span></span><span></span><span></span>
+        </div>
+        <div class="mobile-nav">
+          <a href="#servicos">Serviços</a>
+          <a href="#portfolio">Portfólio</a>
+          <a href="#contato">Contato</a>
+        </div>
+      </nav>
+    </div>
   </header>
-  <section id="about" class="about fade-in">
-    <h2>Sobre Nós</h2>
-    <p>Com mais de uma década de experiência, a RB Estruturas e Eventos é referência em montagem de estruturas para convenções, shows, feiras e eventos de grande porte. Nossa missão é oferecer soluções seguras, impactantes e sofisticadas que transformam cada evento em uma experiência inesquecível.</p>
-  </section>
-  <section id="services" class="services fade-in">
-    <h2>Nossos Serviços</h2>
-    <div class="cards">
-      <div class="card"><h3>Palcos e Estruturas</h3><p>Montagem de palcos modernos e resistentes para grandes apresentações.</p></div>
-      <div class="card"><h3>Arquibancadas</h3><p>Estruturas seguras e confortáveis para receber grandes públicos.</p></div>
-      <div class="card"><h3>Tendas e Coberturas</h3><p>Soluções práticas e elegantes para proteção e ambientação.</p></div>
-      <div class="card"><h3>Sonorização e Luz</h3><p>Equipamentos de última geração para garantir qualidade no seu evento.</p></div>
+
+  <div class="hero">
+    <div>
+      <span class="tag">Especialistas em Convenções</span>
+      <h1>Estruturas seguras e imponentes para convenções e grandes eventos</h1>
+      <p class="lead">Mais de 10 anos de experiência em palcos, tendas, arquibancadas e truss. Atendimento profissional e suporte completo.</p>
+      <button class="btn btn-primary" onclick="document.getElementById('contato').scrollIntoView({behavior:'smooth'})">Solicitar Orçamento</button>
     </div>
-  </section>
-  <section id="gallery" class="gallery fade-in">
-    <h2>Galeria de Eventos</h2>
-    <div class="images">
-      <img src="images/img2.jpg" alt="Evento 1">
-      <img src="images/img3.jpg" alt="Evento 2">
-      <img src="images/img4.jpg" alt="Evento 3">
-      <img src="images/img5.jpg" alt="Evento 4">
-    </div>
-  </section>
-  <section class="numbers fade-in">
-    <div class="stats">
-      <div class="stat"><h3>+10</h3><p>Anos de Experiência</p></div>
-      <div class="stat"><h3>+500</h3><p>Eventos Realizados</p></div>
-      <div class="stat"><h3>100%</h3><p>Clientes Satisfeitos</p></div>
-    </div>
-  </section>
-  <section id="contact" class="contact fade-in">
-    <h2>Fale Conosco</h2>
-    <form>
-      <input type="text" placeholder="Nome" required>
-      <input type="email" placeholder="Email" required>
-      <textarea rows="5" placeholder="Mensagem"></textarea>
-      <button type="submit">Enviar Mensagem</button>
-    </form>
-  </section>
-  <footer>
-    <p>&copy; 2025 RB Estruturas e Eventos. Todos os direitos reservados.</p>
-  </footer>
+  </div>
+
+  <main>
+    <section id="servicos"><h3>O que oferecemos</h3>
+      <div class="services">
+        <div class="service"><h4>Palcos e Estruturas</h4><p>Palcos modulares e robustos para convenções e shows.</p></div>
+        <div class="service"><h4>Tendas e Coberturas</h4><p>Espaços cobertos para congressos, feiras e exposições.</p></div>
+        <div class="service"><h4>Arquibancadas</h4><p>Estruturas seguras com acessibilidade para grandes públicos.</p></div>
+      </div>
+    </section>
+
+    <section id="portfolio"><h3>Portfólio</h3>
+      <div class="gallery">
+        <img src="images/img1.jpg" alt="evento1">
+        <img src="images/img2.jpg" alt="evento2">
+        <img src="images/img3.jpg" alt="evento3">
+      </div>
+    </section>
+
+    <section id="contato"><h3>Solicite um orçamento</h3>
+      <div class="contact">
+        <form class="card" id="orcamentoForm">
+          <input type="text" id="nome" placeholder="Nome / Empresa" required>
+          <input type="tel" id="telefone" placeholder="Telefone" required>
+          <input type="email" id="email" placeholder="E-mail" required>
+          <input type="date" id="data" required>
+          <input type="text" id="local" placeholder="Local do evento" required>
+          <input type="number" id="pessoas" placeholder="Número de pessoas" required>
+          <input type="text" id="orcamento" placeholder="Orçamento estimado (R$)">
+          <select id="tipo" required>
+            <option value="">Tipo de evento</option>
+            <option>Convenção</option>
+            <option>Congresso</option>
+            <option>Show</option>
+            <option>Feira</option>
+            <option>Outro</option>
+          </select>
+          <textarea id="descricao" placeholder="Mais detalhes (estrutura desejada, horários, etc.)"></textarea>
+          <button class="btn btn-primary" type="submit">Enviar para WhatsApp</button>
+        </form>
+        <div class="card">
+          <h4>Contato rápido</h4>
+          <p>WhatsApp: <strong>+55 94 8111-5057</strong><br>Email: contato@rbestruturas.com</p>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer>© RB Estruturas & Eventos — Mais de 10 anos no ramo</footer>
+
   <script>
-    const elements = document.querySelectorAll('.fade-in');
-    const observer = new IntersectionObserver((entries)=>{
-      entries.forEach(entry=>{
-        if(entry.isIntersecting){
-          entry.target.classList.add('visible');
-        }
-      });
-    },{threshold:0.2});
-    elements.forEach(el=>observer.observe(el));
+    // Animação scroll
+    gsap.registerPlugin(ScrollTrigger);
+    gsap.utils.toArray('section').forEach(el=>{
+      ScrollTrigger.create({trigger:el,start:'top 85%',onEnter:()=>el.classList.add('in-view')});
+    });
+
+    // Envio para WhatsApp
+    document.getElementById('orcamentoForm').addEventListener('submit',function(e){
+      e.preventDefault();
+      const nome=document.getElementById('nome').value;
+      const tel=document.getElementById('telefone').value;
+      const email=document.getElementById('email').value;
+      const data=document.getElementById('data').value;
+      const local=document.getElementById('local').value;
+      const pessoas=document.getElementById('pessoas').value;
+      const orcamento=document.getElementById('orcamento').value;
+      const tipo=document.getElementById('tipo').value;
+      const desc=document.getElementById('descricao').value;
+
+      let msg=`*Orçamento solicitado*%0A`;
+      msg+=`Nome: ${nome}%0A`;
+      msg+=`Telefone: ${tel}%0A`;
+      msg+=`Email: ${email}%0A`;
+      msg+=`Data: ${data}%0A`;
+      msg+=`Local: ${local}%0A`;
+      msg+=`Pessoas: ${pessoas}%0A`;
+      msg+=`Orçamento: ${orcamento}%0A`;
+      msg+=`Tipo: ${tipo}%0A`;
+      msg+=`Descrição: ${desc}`;
+
+      window.open(`https://wa.me/559481115057?text=${msg}`,'_blank');
+    });
   </script>
 </body>
 </html>
