--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <h1>Meus Projetos</h1>
         <p>Bem-vindo ao hub do Aristides</p>
     </header>
-
+<!-- ################################################################################# -->
     <div class="project-grid">
         <a href="projeto/bloco_de_notas/index.html" class="card">
             <i>📝</i>
@@ -100,8 +100,18 @@
             <p>Aplicação full-stack com autenticação e banco de dados via Supabase.</p>
             <span class="btn">Acessar App</span>
         </a>
-
-        </div>
-
+    </div>
+<!-- ################################################################################# -->
+<!-- ################################################################################# -->
+    <div class="project-grid">
+        <a href="projeto/bloco_de_notas/index.html" class="card">
+            <i>📝</i>
+            <h2>SISTEMA ERP ABP</h2>
+            <p>Aplicação full-stack com autenticação e banco de dados via Supabase.</p>
+            <span class="btn">Acessar App</span>
+        </a>
+    </div>
+<!-- ################################################################################# -->
+    
 </body>
 </html>
